--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,22 @@
 <resources>
-    <string name="app_name">Yara</string>
+    <string name="app_name">نام اپلیکیشن</string>
 
     <!--bottom nav items-->
     <string name="title_home">صفحه اصلی</string>
     <string name="title_category">دسته بندی ها</string>
+    <!--nav drawer items-->
+    <string name="title_username">نام کاربر</string>
+    <string name="title_profile">پروفایل</string>
+    <string name="title_aboutus">درباره ما</string>
+    <string name="title_calltous">تماس با ما</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="fragment_category">دسته بندی ها</string>
+    <string name="hint_name">نام</string>
+    <string name="hint_lastname">نام خانوداگی</string>
+    <string name="hint_email">ایمیل</string>
+    <string name="hint_enter">ورود</string>
+    <string name="hint_cancel">انصراف</string>
+
 
 </resources>
