--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,10 @@
     <string name="hint_enter">ورود</string>
     <string name="hint_cancel">انصراف</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_contactus">تماس با ما</string>
+    <string name="hint_enter_your_first_name">نام را وارد کنید</string>
+    <string name="hint_enter_your_last_name">نام خانوادگی را وارد کنید</string>
+    <string name="title_submit">ثبت</string>
 
 
 </resources>
